  ConfigurationStore, renamed to PropertyStore, some internal renamings as well as javadoc fixes
  State.isActive() and setActive() renamed to get() and set() respectively
  ValueChange.getOldValue() and getNewValue() renamed to getPreviousValue() and getCurrentValue() respectively
  IntelliJ code analysis based fixes
  StringParser removed, replaced with Function<String, ?>
  FileUtil.getBytesFromFile() removed, use Files.readAllBytes()
  PropertyStore now removes the property when the value is set to null instead of using the defaultValue
0.12.3
  PropertyStore now syncs values to system properties
  Configuration now based on PropertyStore
  PropertyValue interface added, PropertyStore now uses these
  Configuration now uses PropertyValue
  PropertyValue.toString() overridden, now returns the property name
  Module jminor-framework-db-test renamed to jminor-framework-domain-test
  Package names org.jminor.framework.domain.testing and org.jminor.swing.framework.ui.testing to .test to reflect module names
  AbstractTableColumnSyncPanel now uses FlexibleGridLayout instead of FlowLayout, which stretches the component to fill all available vertical space
  Documentation migrated from markdown to asciidoc
  EntityTestUnit refactored, demo domain unit tests fixed
  TextUtil.getDelimitedString() minor bug fixed
  EntityTestUnit.getRandomValue() now truncates LocalDateTime and LocalTime to seconds, to prevent comparison errors when the underlying database system truncates on insert
  Some 3d party dependencies upgraded to latest version
  Plugin modules renamed to reflect package names (as is with java11 version)
  Slf4J dependency changed from 'implementation' to 'api'
  Property.isDecimal() added
  Property.BIG_DECIMAL_ROUNDING_MODE configuration value added
  BigDecimal support added using Types.DECIMAL
  DoubleField renamed to the more appropriate DecimalField
  BigDecimal support continued (as in, things I missed)